**0.2.5**
- Better DBID matching based on year as well as title

**0.2.4**
- Fix simplecache key name enconding as unicode not bytestring
- Add prop_id for numdbiditems/numtmdbitems e.g. Window(Home).Property(TMDBHelper.prop_id.NumDBIDItems)

**0.2.3**
- Add splitting for tmdb_id lookups using &query=

**0.2.2**
- Updates to DBID matching
- Fix search/company

**0.2.1**
- Rewrite some code
- Add seasons and episodes
- Add episode details
- Add episode cast, crew, thumbs

**0.2.0**
- Add language settings
- Add certifications based upon country
- Add posters / fanarts for chosen country

**0.1.9**
- ?info=discover improvements
- &amp;with_id=True when passing TMDb IDs to discover
- &amp;with_separator=AND to only include items matching all values passed to discover
- &amp;with_separator=NONE to only include first value passed to discover
- &amp;with_separator=OR to include any items matching values passed to discover
- Can now also pass without_genres, with_cast, with_crew, with_people

**0.1.8**
- Fix for error when api not available
- Add rating prefix option
- Rate limiting on a per api basis

**0.1.7**
- More cleanup
- Add ?info=posters and ?info=fanart

**0.1.6**
- Don't add duplicate crew members
- Change poster icon
- Add ListItem.Property(job) to crew lists
- Some clean-up